# cas_ws

./: .gitignore  fast_down.csv  fast_up.csv  golden.csv  golden_sample.pcd  golden_x-0.01.csv  golden_yaw+1.2.csv  height_log.csv  laser_height_data.csv  launch_nodes.sh  launch_vision_system.bash  ld.csv  lu.csv  md.csv  mu.csv  requirement  specification.md
golden_samples/: golden_battery.pcd  golden_screw.pcd
src/common_msgs/: CMakeLists.txt  package.xml
src/common_msgs/msg/: ButtonCommand.msg  ClipperCmd.msg  CompensateCmd.msg  ComponentCmd.msg  CurrentPose.msg  ForkCmd.msg  ForkState.msg  FuncCmd.msg  GripperCmd.msg  JogCmd.msg  LimitCmd.msg  MH2State.msg  MotionCmd.msg  MotionState.msg  MultipleM.msg  MultipleMotors.msg  PoseCommand.msg  Recipe.msg  RunCmd.msg  StateCmd.msg  StateInfo.msg  TaskCmd.msg  TaskFlags.msg  TaskState.msg
src/io_module/: package.xml  setup.cfg  setup.py
src/io_module/io_module/: clipper_control.py  depth_rangefinder.py  forklift.py  gripper_control.py  height.py  io_node.py  io_node_origin.py  limit_control.py  origin_fork.py  rangefinder.py  rangefinder_2.py
src/io_module/launch/: io_control.launch.py
src/model_module/: package.xml  setup.cfg  setup.py
src/model_module/model_module/: d-bot.py  magic_cube.py
src/motion_control_module/: package.xml  setup.cfg  setup.py
src/motion_control_module/motion_control_module/: 123.py  control.py  control_2.py  control_v2.py  motion_control.py  motion_control_2.py
src/motor_control_module/: package.xml  setup.cfg  setup.py
src/motor_control_module/launch/: motor_control.launch.py
src/motor_control_module/motor_control_module/: esm_log.py  esp32_motor_control.py
src/my_flexbe_behaviors/: package.xml  setup.py
src/my_flexbe_behaviors/behaviors/: example_behavior.xml
src/my_flexbe_behaviors/my_flexbe_behaviors/: example_behavior_sm.py
src/object_frame_compensation_package/: comprehensive_test.sh  package.xml  quick_test.sh  run_compensation.sh  setup.cfg  setup.py  test_compensation.sh  test_hand_eye.sh
src/object_frame_compensation_package/config/: object_frame_params.yaml
src/object_frame_compensation_package/launch/: object_frame_compensation.launch.py
src/object_frame_compensation_package/object_frame_compensation_package/: coordinate_transforms.py  object_frame_algorithms.py  object_frame_compensation_node.py
src/realsense_camera_driver/: package.xml  setup.cfg  setup.py
src/realsense_camera_driver/config/: parameter.yaml
src/realsense_camera_driver/launch/: realsense_camera.launch.py
src/realsense_camera_driver/realsense_camera_driver/: realsense_camera_node.py
src/show_image_node/: package.xml  setup.py
src/show_image_node/show_image_node/: show_image_node.py
src/state_machine_module/: package.xml  setup.cfg  setup.py
src/state_machine_module/launch/: fsm.launch.py
src/state_machine_module/state_machine_module/: fsm_logic.py  fsm_magiccube.py  magic_transitions.py  magic_transitions_andy.py  magic_yasmin.py  monitor.py  multi_threading.py  run.py  stop.py
src/task_module/: package.xml  setup.cfg  setup.py
src/task_module/task_module/: assembly.py  compensate_node.py  compensate_origin.py  compensate_v2.py  component_control.py  init.py  manual_align.py  pick.py  precise_align.py  recipe_node.py  rough_align.py
src/ui_app/: package.xml  setup.cfg  setup.py
src/ui_app/ui_app/: magic-cube-columns-timeline.ui  patch_icons.py  resources.qrc  resources_rc.py  settings.json  ui_magic_cube.py  ui_magic_cube.ui  ui_node.py  (+1 more)
src/ui_module/: package.xml  setup.cfg  setup.py
src/uros_interface/: CMakeLists.txt
src/utility/: vision.cpp  vision.hpp
src/vision_compensate/: .gitignore  CMakeLists.txt  package.xml  realsense_specification.md  requirement
src/vision_compensate/realsense_camera_node/: CMakeLists.txt  package.xml
src/vision_compensate/realsense_camera_node/config/: parameter.yaml
src/vision_compensate/realsense_camera_node/include/realsense_camera_node/: camera_config.hpp  realsense_camera_node.hpp
src/vision_compensate/realsense_camera_node/launch/: realsense_camera.launch.py
src/vision_compensate/realsense_camera_node/scripts/: build_and_run.bash  setup_dependencies.bash
src/vision_compensate/realsense_camera_node/src/: realsense_camera_node.cpp
src/vision_compensate/src/realsense_multi_camera/: CMakeLists.txt  package.xml
src/vision_compensate/src/realsense_multi_camera/config/: parameter.yaml
src/vision_compensate/src/realsense_multi_camera/include/realsense_multi_camera/: camera_config.hpp  realsense_multi_camera_node.hpp
src/vision_compensate/src/realsense_multi_camera/launch/: realsense_camera.launch.py
src/vision_compensate/src/realsense_multi_camera/scripts/: build_and_run.bash  portable_setup_environment.bash  setup_environment.bash
src/vision_compensate/src/realsense_multi_camera/src/: realsense_multi_camera_node.cpp
src/vision_compensation/: package.xml  setup.cfg  setup.py
src/vision_module/: package.xml  setup.cfg  setup.py
ultilty/: example.cs  vision.cs
(+85 files in other folders)
